--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js"
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
+            "args": ["--config","jest.web.config.js"]
         }
     ]
 }
