--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,26 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
+            "args": ["--config","jest.config.js"]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run Web Tests",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
             "args": ["--config","jest.web.config.js"]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run Test Server",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/test-web/server.js"
         }
     ]
 }
