--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
+    "test-server": "node test-web/server.js",
     "test-web": "jest --config jest.web.config.js",
     "coverage-web": "jest --config jest.web.config.js --coverage",
-    "build": "rm -rf babelsrc && babel src --out-dir babelsrc --presets=@babel/env && webpack",
-    "babel": "rm -rf babelsrc && babel src --out-dir babelsrc --presets=@babel/env"
+    "babel": "rm -rf babelsrc && babel src --out-dir babelsrc --presets=@babel/env && webpack --config webpack.config.babel.js",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,10 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "clean-webpack-plugin": "^3.0.0",
+    "express": "^4.17.1",
     "jest": "^24.9.0",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^2.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
