--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --config jest.config.js --coverage",
     "test-server": "node test-web/server.js",
-    "test-web": "jest --config jest.web.config.js --coverage",
+    "test-web": "jest --config jest.web.config.js --detectOpenHandles",
     "babel": "rm -rf babelsrc && babel src --out-dir babelsrc --presets=@babel/env && webpack --config webpack.config.babel.js",
     "build": "webpack --config webpack.config.js"
   },
@@ -33,9 +33,5 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.7.0",
-    "core-js": "^2.6.11",
-    "next-i18next": "^3.0.1"
-  }
+  "dependencies": {}
 }
