--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --config jest.config.js --coverage",
+    "test-optimized": "jest --config jest.config.optimized.js --coverage",
     "test-server": "node test-web/server.js",
     "test-web": "jest --config jest.web.config.js --detectOpenHandles",
+    "test-web-optimized": "jest --config jest.web.config.optimized.js --detectOpenHandles",
     "babel": "rm -rf babelsrc && babel src --out-dir babelsrc --presets=@babel/env && webpack --config webpack.config.babel.js",
     "build": "webpack --config webpack.config.js"
   },
