--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
     "express": "^4.17.1",
     "jest": "^24.9.0",
