test conf simplified

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/test-web/server.js"
+            "program": "${workspaceFolder}/test-server/index.js"
         }
     ]
 }
